# a2apex

./: .gitignore  LICENSE  README.md  dns_check.py  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py
agents/code_reviewer/: __init__.py  main.py
agents/math_agent/: main.py
agents/trivia_agent/: __init__.py  main.py
api/: __init__.py  auth.py  badges.py  main.py  payments.py  profiles.py
core/: __init__.py  agent_card_validator.py  auth_tester.py  error_tester.py  fix_guidance.py  live_tester.py  perf_tester.py  protocol_checker.py  state_machine.py  streaming_tester.py  task_tester.py  test_scenarios.py
data/: agent_profiles.db  api_keys.json  certifications.db  stripe_config.json  test_usage.db  users.db  waitlist.db
docs/: a2a_protocol_deep_dive.md  a2a_spec_notes.md  demo_script.md  launch-copy-v2.md  launch-copy.md  launch_copy.md  quickstart.md  take_screenshots.py
docs-site/: agent-card.html  api.html  index.html  quickstart.html  sdk.html  testing.html
landing/: index.html  package-lock.json
landing/public/: CNAME  index.html  og-card.html  privacy.html  sitemap.xml  terms.html
launch/: demo_script.md  product_hunt_draft.md  show_hn_draft.md  x_thread_draft.md
sample_agent/: README.md  __init__.py  main.py  requirements.txt
scripts/: create_startup_tier.py
sdk/: LICENSE  README.md  __init__.py  pyproject.toml
sdk/src/a2apex/: __init__.py  cli.py  client.py  models.py  report.py  state_machine.py  tester.py  validator.py
sdk/tests/: __init__.py  test_models.py  test_state_machine.py  test_validator.py
web/: index.html  logos.html
