[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2apex"
version = "0.1.1"
description = "Test, validate, and certify A2A protocol implementations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Apex Ventures LLC", email = "team@a2apex.io" }
]
keywords = [
    "a2a",
    "agent-to-agent",
    "ai-agents",
    "testing",
    "validation",
    "certification",
    "protocol",
    "json-rpc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "mypy>=1.0",
    "ruff>=0.1",
]
all = [
    "a2apex[rich,dev]",
]

[project.urls]
Homepage = "https://a2apex.io"
Documentation = "https://github.com/Hauk307/a2apex"
Repository = "https://github.com/Hauk307/a2apex"
Issues = "https://github.com/Hauk307/a2apex/issues"

[project.scripts]
a2apex = "a2apex.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/a2apex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
